k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-feeder-server-deploy
  labels:
    app: pet-feeder-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-feeder-server
  template:
    metadata:
      labels:
        app: pet-feeder-server
    spec:
      containers:
        - name: pet-feeder-server
          image: ghcr.io/15666671996/petfeederbackend/pet-feeder-server:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-feeder-cv-deploy
  labels:
    app: pet-feeder-cv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-feeder-cv
  template:
    metadata:
      labels:
        app: pet-feeder-cv
    spec:
      containers:
        - name: pet-feeder-cv
          image: ghcr.io/15666671996/petfeederbackend/pet-feeder-cv:main
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-feeder-db-deploy
  labels:
    app: pet-feeder-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pet-feeder-db
  template:
    metadata:
      labels:
        app: pet-feeder-db
    spec:
      containers:
        - name: pet-feeder-db
          image: docker.io/library/mariadb:10.6
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: shared
              mountPath: /docker-entrypoint-initdb.d
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: shared
          emptyDir: {}
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: pet-feeder-db-pvc
